samples/_failures_safe/1761127859_9bf672_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49ed56b4.c: In function ‘tokenize’:
./samples/SAFE/__tmp_49ed56b4.c:154:16: error: expected ‘)’ at end of input
  154 |         (*token
      |         ~      ^
      |                )
./samples/SAFE/__tmp_49ed56b4.c:154:9: error: expected declaration or statement at end of input
  154 |         (*token
      |         ^
./samples/SAFE/__tmp_49ed56b4.c:154:9: error: expected declaration or statement at end of input
